# ChangeLog for net-analyzer/rrdtool
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.27 2003/12/31 14:00:16 mcummings Exp $

*rrdtool-1.0.45-r2 (31 Dec 2003)

  31 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  rrdtool-1.0.45-r2.ebuild:
  Corrections for the inclusion and operation of the perl portion. There were
  sandbox violations for the perl man pages becasue of makemaker versions. The
  new version will cleanly install all parts in all the right places. Bug was
  reported on IRC by Geert Hauwaerts <geert@irssi.org>

*rrdtool-1.0.45-r1 (22 Dec 2003)

  22 Dec 2003; <rac@gentoo.org> rrdtool-1.0.45-r1.ebuild:
  Make perl stuff install into vendordir, address bug 30617

  24 Nov 2003; Aron Griffis <agriffis@gentoo.org> rrdtool-1.0.45.ebuild:
  Add ~alpha

  20 Nov 2003; Daniel Ahlberg <aliz@gentoo.org> rrdtool-1.0.45.ebuild :
  Make it build on amd64.

  01 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> rrdtool-1.0.42-r2.ebuild, rrdtool-1.0.40-r1.ebuild,
						rrdtool-1.0.45.ebuild :
  If neither perl or tcltk are enabled pkg_setup will fail becuse the last use check returns 1.

*rrdtool-1.0.45 (30 Jul 2003)

  30 Jul 2003; Martin Holzer <mholzer@gentoo.org> rrdtool-1.0.45.ebuild:
  Version bumped.

  22 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> rrdtool-0.41.ebuild,
  rrdtool-0.41-r1.ebuild, rrdtool-0.42.ebuild, rrdtool-0.42-r1.ebuild :
  Changed flags alteration.

*rrdtool-1.0.41-r1 (01 Jun 2003)

  01 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  rrdtool-1.0.40-r1.ebuild, rrdtool-1.0.41-r1.ebuild,
  rrdtool-1.0.42-r1.ebuild:
  Version bump because eclasses changed

  30 May 2003; Seemant Kulleen <seemant@gentoo.org> rrdtool-1.0.42.ebuild:
  change perl-post to perl-module for inheritance

*rrdtool-1.0.42-r1 (02 Jun 2003)
 
  13 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*rrdtool-1.0.42 (16 Apr 2003)
