@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/rrdtool-1.0.45-r2.ebuild,v 1.1 2003/12/31 14:00:16 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/rrdtool-1.0.45-r2.ebuild,v 1.2 2004/01/29 20:16:52 gustavoz Exp $
 
 inherit perl-module flag-o-matic gnuconfig
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://people.ee.ethz.ch/~oetiker/webtools/rrdtool/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc ~sparc ~amd64 ~alpha"
+KEYWORDS="x86 ~ppc sparc ~amd64 ~alpha"
 IUSE="tcltk perl"
 
 filter-mfpmath "sse"
