@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/rrdtool
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.27 2003/12/31 14:00:16 mcummings Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.28 2004/01/29 20:16:52 gustavoz Exp $
+
+  29 Jan 2004; <gustavoz@gentoo.org> rrdtool-1.0.45-r2.ebuild:
+  marked stable on sparc
 
 *rrdtool-1.0.45-r2 (31 Dec 2003)
 
